--- a/styles/header.css
+++ b/styles/header.css
@@ -3,14 +3,16 @@
     justify-content: space-between;
     border-bottom: 2px solid;
     margin: 0px 0px 1px;
-    background-color: rgb(230, 228, 228);
+    background-color: white;
     height: 50px;
 }
+
 .header__nav {
     display: flex;
     justify-content: space-between;
-    color: #9d9488;
+    color: black;
 }
+
 .header__nav a {
     display: flex;
     align-items: center;
@@ -20,6 +22,7 @@
     font-size: 16px;
     width: 140px;
 }
+
 .header__nav h1 {
     font-size: 20px;
     font-weight: normal;
@@ -28,18 +31,22 @@
     justify-content: center;
     width: 140px;
 }
-.header__nav a:hover{
+
+.header__nav a:hover {
     background: #ccc;
 }
-.header__nav a:focus{
+
+.header__nav a:focus {
     background: #ccc;
 }
+
 .header__not_nav {
     display: flex;
     align-items: center;
     justify-content: space-around;
     width: 500px;
 }
+
 .header__input {
     width: 240px;
     height: 30px;
@@ -49,6 +56,7 @@
     padding-left: 10px;
     color: grey;
 }
+
 .button__search {
     width: 90px;
     height: 30px;
@@ -58,6 +66,7 @@
     border-radius: 5px;
     background: #fff;
 }
+
 .button__clear {
     width: 70px;
     height: 30px;
