--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,8 @@
     flex-wrap: wrap;
     margin: 0 0 0 30%;
 }
-.main__equipment {
+
+.main__sneaker {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,29 +12,50 @@
     height: auto;
     margin: 20px;
 }
-.main__equipment-header {
+
+.main__sneaker-header {
     height: 10%;
     width: 100%;
     font-weight: 700;
     font-size: 25px;
     text-align: center;
 }
-.main__equipment-description-text {
+
+.main__sneaker-description-text {
     margin-top: 10px;
     text-align: center;
 }
-.main__equipment-price {
+
+.main__sneaker-price {
     display: flex;
     text-align: center;
     justify-content: center;
     height: auto;
 }
-.main__equipment-price h3 {
+
+.main__sneaker-price h3 {
     margin-right: 5px;
 }
-.main__equipment-buttons-container {
+
+.main__sneaker-buttons-container {
     display: flex;
     justify-content: space-around;
     width: 150px;
     margin-bottom: 10px;
+}
+
+.main__sneaker-edit-button {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+    text-decoration: none;
+    color: initial;
+}
+
+.main__sneaker-remove-button {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+    text-decoration: none;
+    color: initial;
 }
