--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,3 +3,5 @@
 @import url("aside.css");
 @import url("global.css");
 @import url("main.css");
+@import url("create.css");
+@import url("edit.css");
